@@ -39,9 +39,8 @@ class K3bIsoOptions
   bool createUdf() const { return m_createUdf; }
   bool ISOallowLowercase() const { return m_ISOallowLowercase; }
   bool ISOallowPeriodAtBegin() const { return m_ISOallowPeriodAtBegin; }
-  bool ISOallow31charFilenames() const { return m_ISOallow31charFilenames; }
-  bool ISOomitVersionNumbers() const { return m_ISOomitVersionNumbers; }
-  bool ISOomitTrailingPeriod() const { return m_ISOomitTrailingPeriod; }
+  bool ISOallow31charFilenames() const { return m_ISOallow31charFilenames || ISOmaxFilenameLength(); }
+  bool ISOomitVersionNumbers() const { return m_ISOomitVersionNumbers || ISOmaxFilenameLength(); }
   bool ISOmaxFilenameLength() const { return m_ISOmaxFilenameLength; }
   bool ISOrelaxedFilenames() const { return m_ISOrelaxedFilenames; }
   bool ISOnoIsoTranslate() const { return m_ISOnoIsoTranslate; }
